--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 }
 .card {
     width: 100%;
+    max-width: 1200px;
     height: 100%;
     position: absolute;
     backface-visibility: hidden;
